implementacao/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOISPONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice LCOLCHETE expressao RCOLCHETE
Rule 14    indice -> LCOLCHETE expressao RCOLCHETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOISPONTOS ID
Rule 24    parametro -> parametro LCOLCHETE RCOLCHETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIB expressao
Rule 39    leia -> LEIA LPARENTHESYS var RPARENTHESYS
Rule 40    escreva -> ESCREVA LPARENTHESYS expressao RPARENTHESYS
Rule 41    retorna -> RETORNA LPARENTHESYS expressao RPARENTHESYS
Rule 42    retorna -> RETORNA expressao
Rule 43    expressao -> expressao_logica
Rule 44    expressao -> atribuicao
Rule 45    vazio -> <empty>
Rule 46    expressao_logica -> expressao_simples
Rule 47    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 48    expressao_simples -> expressao_aditiva
Rule 49    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 50    expressao_aditiva -> expressao_multiplicativa
Rule 51    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 52    expressao_multiplicativa -> expressao_unaria
Rule 53    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 54    expressao_unaria -> fator
Rule 55    expressao_unaria -> operador_soma fator
Rule 56    expressao_unaria -> operador_negacao fator
Rule 57    operador_relacional -> LESSER
Rule 58    operador_relacional -> GREATER
Rule 59    operador_relacional -> EQUAL
Rule 60    operador_relacional -> DIFF
Rule 61    operador_relacional -> LESSEREQ
Rule 62    operador_relacional -> GREATEREQ
Rule 63    operador_soma -> PLUS
Rule 64    operador_soma -> MINUS
Rule 65    operador_negacao -> NEGATION
Rule 66    operador_logico -> AND
Rule 67    operador_logico -> OR
Rule 68    operador_multiplicacao -> MULT
Rule 69    operador_multiplicacao -> DIV
Rule 70    fator -> LPARENTHESYS expressao RPARENTHESYS
Rule 71    fator -> var
Rule 72    fator -> chamada_funcao
Rule 73    fator -> numero
Rule 74    numero -> INT
Rule 75    numero -> FLOAT
Rule 76    chamada_funcao -> ID LPARENTHESYS lista_argumentos RPARENTHESYS
Rule 77    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 78    lista_argumentos -> expressao
Rule 79    lista_argumentos -> vazio

Terminals, with rules where they appear

AND                  : 66
ATE                  : 37
ATRIB                : 38
DIFF                 : 60
DIV                  : 69
DOISPONTOS           : 7 23
ENTAO                : 35 36
EQUAL                : 59
ESCREVA              : 40
FIM                  : 19 35 36
FLOAT                : 75
FLUTUANTE            : 16
GREATER              : 58
GREATEREQ            : 62
ID                   : 11 12 19 23 76
INT                  : 74
INTEIRO              : 15
LCOLCHETE            : 13 14 24
LEIA                 : 39
LESSER               : 57
LESSEREQ             : 61
LPARENTHESYS         : 19 39 40 41 70 76
MINUS                : 64
MULT                 : 68
NEGATION             : 65
OR                   : 67
PLUS                 : 63
RCOLCHETE            : 13 14 24
REPITA               : 37
RETORNA              : 41 42
RPARENTHESYS         : 19 39 40 41 70 76
SE                   : 35 36
SENAO                : 36
VIRGULA              : 9 20 77
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 44
cabecalho            : 17 18
chamada_funcao       : 72
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 42 70 77 78
expressao_aditiva    : 48 49 51
expressao_logica     : 43 47
expressao_multiplicativa : 50 51 53
expressao_simples    : 46 47 49
expressao_unaria     : 52 53
fator                : 54 55 56
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 76 77
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
numero               : 73
operador_logico      : 47
operador_multiplicacao : 53
operador_negacao     : 56
operador_relacional  : 49
operador_soma        : 51 55
parametro            : 20 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 39 71
vazio                : 22 26 79

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIB expressao
    (19) cabecalho -> . ID LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 7
    ID              shift and go to state 5

    declaracao_funcao              shift and go to state 6
    atribuicao                     shift and go to state 1
    lista_declaracoes              shift and go to state 2
    inicializacao_variaveis        shift and go to state 8
    tipo                           shift and go to state 9
    declaracao                     shift and go to state 4
    cabecalho                      shift and go to state 11
    var                            shift and go to state 12
    programa                       shift and go to state 13
    declaracao_variaveis           shift and go to state 10

state 1

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIB expressao
    (19) cabecalho -> . ID LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 7
    ID              shift and go to state 5

    declaracao_funcao              shift and go to state 6
    atribuicao                     shift and go to state 1
    inicializacao_variaveis        shift and go to state 8
    tipo                           shift and go to state 9
    declaracao                     shift and go to state 14
    cabecalho                      shift and go to state 11
    var                            shift and go to state 12
    declaracao_variaveis           shift and go to state 10

state 3

    (15) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 4

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 5

    (19) cabecalho -> ID . LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice LCOLCHETE expressao RCOLCHETE
    (14) indice -> . LCOLCHETE expressao RCOLCHETE

    LPARENTHESYS    shift and go to state 16
    ATRIB           reduce using rule 11 (var -> ID .)
    LCOLCHETE       shift and go to state 15

    indice                         shift and go to state 17

state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (16) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 8

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 9

    (7) declaracao_variaveis -> tipo . DOISPONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM

    DOISPONTOS      shift and go to state 18
    ID              shift and go to state 20

    cabecalho                      shift and go to state 19

state 10

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 11

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 12

    (38) atribuicao -> var . ATRIB expressao

    ATRIB           shift and go to state 21


state 13

    (0) S' -> programa .



state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (14) indice -> LCOLCHETE . expressao RCOLCHETE
    (43) expressao -> . expressao_logica
    (44) expressao -> . atribuicao
    (46) expressao_logica -> . expressao_simples
    (47) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIB expressao
    (48) expressao_simples -> . expressao_aditiva
    (49) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (50) expressao_aditiva -> . expressao_multiplicativa
    (51) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (52) expressao_multiplicativa -> . expressao_unaria
    (53) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (54) expressao_unaria -> . fator
    (55) expressao_unaria -> . operador_soma fator
    (56) expressao_unaria -> . operador_negacao fator
    (70) fator -> . LPARENTHESYS expressao RPARENTHESYS
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (63) operador_soma -> . PLUS
    (64) operador_soma -> . MINUS
    (65) operador_negacao -> . NEGATION
    (76) chamada_funcao -> . ID LPARENTHESYS lista_argumentos RPARENTHESYS
    (74) numero -> . INT
    (75) numero -> . FLOAT

    ID              shift and go to state 33
    LPARENTHESYS    shift and go to state 37
    PLUS            shift and go to state 34
    MINUS           shift and go to state 25
    NEGATION        shift and go to state 22
    INT             shift and go to state 27
    FLOAT           shift and go to state 31

    expressao_aditiva              shift and go to state 35
    expressao_unaria               shift and go to state 36
    operador_negacao               shift and go to state 24
    chamada_funcao                 shift and go to state 28
    numero                         shift and go to state 38
    expressao                      shift and go to state 32
    operador_soma                  shift and go to state 26
    atribuicao                     shift and go to state 23
    fator                          shift and go to state 39
    expressao_logica               shift and go to state 29
    expressao_multiplicativa       shift and go to state 30
    var                            shift and go to state 40
    expressao_simples              shift and go to state 41

state 16

    (19) cabecalho -> ID LPARENTHESYS . lista_parametros RPARENTHESYS corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOISPONTOS ID
    (24) parametro -> . parametro LCOLCHETE RCOLCHETE
    (45) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    RPARENTHESYS    reduce using rule 45 (vazio -> .)
    VIRGULA         reduce using rule 45 (vazio -> .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 7

    vazio                          shift and go to state 43
    tipo                           shift and go to state 45
    parametro                      shift and go to state 44
    lista_parametros               shift and go to state 42

state 17

    (12) var -> ID indice .
    (13) indice -> indice . LCOLCHETE expressao RCOLCHETE

    MULT            reduce using rule 12 (var -> ID indice .)
    DIV             reduce using rule 12 (var -> ID indice .)
    PLUS            reduce using rule 12 (var -> ID indice .)
    MINUS           reduce using rule 12 (var -> ID indice .)
    LESSER          reduce using rule 12 (var -> ID indice .)
    GREATER         reduce using rule 12 (var -> ID indice .)
    EQUAL           reduce using rule 12 (var -> ID indice .)
    DIFF            reduce using rule 12 (var -> ID indice .)
    LESSEREQ        reduce using rule 12 (var -> ID indice .)
    GREATEREQ       reduce using rule 12 (var -> ID indice .)
    AND             reduce using rule 12 (var -> ID indice .)
    OR              reduce using rule 12 (var -> ID indice .)
    RCOLCHETE       reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    RPARENTHESYS    reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    LPARENTHESYS    reduce using rule 12 (var -> ID indice .)
    NEGATION        reduce using rule 12 (var -> ID indice .)
    INT             reduce using rule 12 (var -> ID indice .)
    FLOAT           reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    ATRIB           reduce using rule 12 (var -> ID indice .)
    LCOLCHETE       shift and go to state 46


state 18

    (7) declaracao_variaveis -> tipo DOISPONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 49

    lista_variaveis                shift and go to state 47
    var                            shift and go to state 48

state 19

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 20

    (19) cabecalho -> ID . LPARENTHESYS lista_parametros RPARENTHESYS corpo FIM

    LPARENTHESYS    shift and go to state 16


state 21

    (38) atribuicao -> var ATRIB . expressao
    (43) expressao -> . expressao_logica
    (44) expressao -> . atribuicao
    (46) expressao_logica -> . expressao_simples
    (47) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIB expressao
    (48) expressao_simples -> . expressao_aditiva
    (49) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (50) expressao_aditiva -> . expressao_multiplicativa
    (51) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (52) expressao_multiplicativa -> . expressao_unaria
    (53) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (54) expressao_unaria -> . fator
    (55) expressao_unaria -> . operador_soma fator
    (56) expressao_unaria -> . operador_negacao fator
    (70) fator -> . LPARENTHESYS expressao RPARENTHESYS
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (63) operador_soma -> . PLUS
    (64) operador_soma -> . MINUS
    (65) operador_negacao -> . NEGATION
    (76) chamada_funcao -> . ID LPARENTHESYS lista_argumentos RPARENTHESYS
    (74) numero -> . INT
    (75) numero -> . FLOAT

    ID              shift and go to state 33
    LPARENTHESYS    shift and go to state 37
    PLUS            shift and go to state 34
    MINUS           shift and go to state 25
    NEGATION        shift and go to state 22
    INT             shift and go to state 27
    FLOAT           shift and go to state 31

    expressao_aditiva              shift and go to state 35
    expressao_unaria               shift and go to state 36
    operador_negacao               shift and go to state 24
    chamada_funcao                 shift and go to state 28
    numero                         shift and go to state 38
    expressao                      shift and go to state 50
    operador_soma                  shift and go to state 26
    atribuicao                     shift and go to state 23
    fator                          shift and go to state 39
    expressao_logica               shift and go to state 29
    expressao_multiplicativa       shift and go to state 30
    var                            shift and go to state 40
    expressao_simples              shift and go to state 41

state 22

    (65) operador_negacao -> NEGATION .

    LPARENTHESYS    reduce using rule 65 (operador_negacao -> NEGATION .)
    ID              reduce using rule 65 (operador_negacao -> NEGATION .)
    INT             reduce using rule 65 (operador_negacao -> NEGATION .)
    FLOAT           reduce using rule 65 (operador_negacao -> NEGATION .)


state 23

    (44) expressao -> atribuicao .

    RPARENTHESYS    reduce using rule 44 (expressao -> atribuicao .)
    RCOLCHETE       reduce using rule 44 (expressao -> atribuicao .)
    FIM             reduce using rule 44 (expressao -> atribuicao .)
    error           reduce using rule 44 (expressao -> atribuicao .)
    SE              reduce using rule 44 (expressao -> atribuicao .)
    REPITA          reduce using rule 44 (expressao -> atribuicao .)
    LEIA            reduce using rule 44 (expressao -> atribuicao .)
    ESCREVA         reduce using rule 44 (expressao -> atribuicao .)
    RETORNA         reduce using rule 44 (expressao -> atribuicao .)
    INTEIRO         reduce using rule 44 (expressao -> atribuicao .)
    FLUTUANTE       reduce using rule 44 (expressao -> atribuicao .)
    ID              reduce using rule 44 (expressao -> atribuicao .)
    LPARENTHESYS    reduce using rule 44 (expressao -> atribuicao .)
    PLUS            reduce using rule 44 (expressao -> atribuicao .)
    MINUS           reduce using rule 44 (expressao -> atribuicao .)
    NEGATION        reduce using rule 44 (expressao -> atribuicao .)
    INT             reduce using rule 44 (expressao -> atribuicao .)
    FLOAT           reduce using rule 44 (expressao -> atribuicao .)
    VIRGULA         reduce using rule 44 (expressao -> atribuicao .)
    SENAO           reduce using rule 44 (expressao -> atribuicao .)
    ENTAO           reduce using rule 44 (expressao -> atribuicao .)
    ATE             reduce using rule 44 (expressao -> atribuicao .)
    $end            reduce using rule 44 (expressao -> atribuicao .)


state 24

    (56) expressao_unaria -> operador_negacao . fator
    (70) fator -> . LPARENTHESYS expressao RPARENTHESYS
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (11) var -> . ID
    (12) var -> . ID indice
    (76) chamada_funcao -> . ID LPARENTHESYS lista_argumentos RPARENTHESYS
    (74) numero -> . INT
    (75) numero -> . FLOAT

    LPARENTHESYS    shift and go to state 37
    ID              shift and go to state 33
    INT             shift and go to state 27
    FLOAT           shift and go to state 31

    numero                         shift and go to state 38
    chamada_funcao                 shift and go to state 28
    fator                          shift and go to state 52
    var                            shift and go to state 51

state 25

    (64) operador_soma -> MINUS .

    LPARENTHESYS    reduce using rule 64 (operador_soma -> MINUS .)
    ID              reduce using rule 64 (operador_soma -> MINUS .)
    INT             reduce using rule 64 (operador_soma -> MINUS .)
    FLOAT           reduce using rule 64 (operador_soma -> MINUS .)
    PLUS            reduce using rule 64 (operador_soma -> MINUS .)
    MINUS           reduce using rule 64 (operador_soma -> MINUS .)
    NEGATION        reduce using rule 64 (operador_soma -> MINUS .)


state 26

    (55) expressao_unaria -> operador_soma . fator
    (70) fator -> . LPARENTHESYS expressao RPARENTHESYS
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (11) var -> . ID
    (12) var -> . ID indice
    (76) chamada_funcao -> . ID LPARENTHESYS lista_argumentos RPARENTHESYS
    (74) numero -> . INT
    (75) numero -> . FLOAT

    LPARENTHESYS    shift and go to state 37
    ID              shift and go to state 33
    INT             shift and go to state 27
    FLOAT           shift and go to state 31

    numero                         shift and go to state 38
    chamada_funcao                 shift and go to state 28
    fator                          shift and go to state 53
    var                            shift and go to state 51

state 27

    (74) numero -> INT .

    MULT            reduce using rule 74 (numero -> INT .)
    DIV             reduce using rule 74 (numero -> INT .)
    PLUS            reduce using rule 74 (numero -> INT .)
    MINUS           reduce using rule 74 (numero -> INT .)
    LESSER          reduce using rule 74 (numero -> INT .)
    GREATER         reduce using rule 74 (numero -> INT .)
    EQUAL           reduce using rule 74 (numero -> INT .)
    DIFF            reduce using rule 74 (numero -> INT .)
    LESSEREQ        reduce using rule 74 (numero -> INT .)
    GREATEREQ       reduce using rule 74 (numero -> INT .)
    AND             reduce using rule 74 (numero -> INT .)
    OR              reduce using rule 74 (numero -> INT .)
    FIM             reduce using rule 74 (numero -> INT .)
    error           reduce using rule 74 (numero -> INT .)
    SE              reduce using rule 74 (numero -> INT .)
    REPITA          reduce using rule 74 (numero -> INT .)
    LEIA            reduce using rule 74 (numero -> INT .)
    ESCREVA         reduce using rule 74 (numero -> INT .)
    RETORNA         reduce using rule 74 (numero -> INT .)
    INTEIRO         reduce using rule 74 (numero -> INT .)
    FLUTUANTE       reduce using rule 74 (numero -> INT .)
    ID              reduce using rule 74 (numero -> INT .)
    LPARENTHESYS    reduce using rule 74 (numero -> INT .)
    NEGATION        reduce using rule 74 (numero -> INT .)
    INT             reduce using rule 74 (numero -> INT .)
    FLOAT           reduce using rule 74 (numero -> INT .)
    ATE             reduce using rule 74 (numero -> INT .)
    SENAO           reduce using rule 74 (numero -> INT .)
    RPARENTHESYS    reduce using rule 74 (numero -> INT .)
    VIRGULA         reduce using rule 74 (numero -> INT .)
    ENTAO           reduce using rule 74 (numero -> INT .)
    RCOLCHETE       reduce using rule 74 (numero -> INT .)
    $end            reduce using rule 74 (numero -> INT .)


state 28

    (72) fator -> chamada_funcao .

    MULT            reduce using rule 72 (fator -> chamada_funcao .)
    DIV             reduce using rule 72 (fator -> chamada_funcao .)
    PLUS            reduce using rule 72 (fator -> chamada_funcao .)
    MINUS           reduce using rule 72 (fator -> chamada_funcao .)
    LESSER          reduce using rule 72 (fator -> chamada_funcao .)
    GREATER         reduce using rule 72 (fator -> chamada_funcao .)
    EQUAL           reduce using rule 72 (fator -> chamada_funcao .)
    DIFF            reduce using rule 72 (fator -> chamada_funcao .)
    LESSEREQ        reduce using rule 72 (fator -> chamada_funcao .)
    GREATEREQ       reduce using rule 72 (fator -> chamada_funcao .)
    AND             reduce using rule 72 (fator -> chamada_funcao .)
    OR              reduce using rule 72 (fator -> chamada_funcao .)
    FIM             reduce using rule 72 (fator -> chamada_funcao .)
    SENAO           reduce using rule 72 (fator -> chamada_funcao .)
    error           reduce using rule 72 (fator -> chamada_funcao .)
    SE              reduce using rule 72 (fator -> chamada_funcao .)
    REPITA          reduce using rule 72 (fator -> chamada_funcao .)
    LEIA            reduce using rule 72 (fator -> chamada_funcao .)
    ESCREVA         reduce using rule 72 (fator -> chamada_funcao .)
    RETORNA         reduce using rule 72 (fator -> chamada_funcao .)
    INTEIRO         reduce using rule 72 (fator -> chamada_funcao .)
    FLUTUANTE       reduce using rule 72 (fator -> chamada_funcao .)
    ID              reduce using rule 72 (fator -> chamada_funcao .)
    LPARENTHESYS    reduce using rule 72 (fator -> chamada_funcao .)
    NEGATION        reduce using rule 72 (fator -> chamada_funcao .)
    INT             reduce using rule 72 (fator -> chamada_funcao .)
    FLOAT           reduce using rule 72 (fator -> chamada_funcao .)
    RCOLCHETE       reduce using rule 72 (fator -> chamada_funcao .)
    $end            reduce using rule 72 (fator -> chamada_funcao .)
    RPARENTHESYS    reduce using rule 72 (fator -> chamada_funcao .)
    VIRGULA         reduce using rule 72 (fator -> chamada_funcao .)
    ENTAO           reduce using rule 72 (fator -> chamada_funcao .)
    ATE             reduce using rule 72 (fator -> chamada_funcao .)


state 29

    (43) expressao -> expressao_logica .
    (47) expressao_logica -> expressao_logica . operador_logico expressao_simples
    (66) operador_logico -> . AND
    (67) operador_logico -> . OR

    RPARENTHESYS    reduce using rule 43 (expressao -> expressao_logica .)
    RCOLCHETE       reduce using rule 43 (expressao -> expressao_logica .)
    FIM             reduce using rule 43 (expressao -> expressao_logica .)
    error           reduce using rule 43 (expressao -> expressao_logica .)
    SE              reduce using rule 43 (expressao -> expressao_logica .)
    REPITA          reduce using rule 43 (expressao -> expressao_logica .)
    LEIA            reduce using rule 43 (expressao -> expressao_logica .)
    ESCREVA         reduce using rule 43 (expressao -> expressao_logica .)
    RETORNA         reduce using rule 43 (expressao -> expressao_logica .)
    INTEIRO         reduce using rule 43 (expressao -> expressao_logica .)
    FLUTUANTE       reduce using rule 43 (expressao -> expressao_logica .)
    ID              reduce using rule 43 (expressao -> expressao_logica .)
    LPARENTHESYS    reduce using rule 43 (expressao -> expressao_logica .)
    PLUS            reduce using rule 43 (expressao -> expressao_logica .)
    MINUS           reduce using rule 43 (expressao -> expressao_logica .)
    NEGATION        reduce using rule 43 (expressao -> expressao_logica .)
    INT             reduce using rule 43 (expressao -> expressao_logica .)
    FLOAT           reduce using rule 43 (expressao -> expressao_logica .)
    VIRGULA         reduce using rule 43 (expressao -> expressao_logica .)
    SENAO           reduce using rule 43 (expressao -> expressao_logica .)
    ENTAO           reduce using rule 43 (expressao -> expressao_logica .)
    ATE             reduce using rule 43 (expressao -> expressao_logica .)
    $end            reduce using rule 43 (expressao -> expressao_logica .)
    AND             shift and go to state 54
    OR              shift and go to state 55

    operador_logico                shift and go to state 56

state 30

    (50) expressao_aditiva -> expressao_multiplicativa .
    (53) expressao_multiplicativa -> expressao_multiplicativa . operador_multiplicacao expressao_unaria
    (68) operador_multiplicacao -> . MULT
    (69) operador_multiplicacao -> . DIV
